--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,6 +14,17 @@
   src: url("./fonts/Montserrat.ttf") format("truetype");
 }
 
+@font-face {
+  font-family: "Milker";
+  src: url("./fonts/Milker.otf") format("otf");
+}
+
+@font-face {
+  font-family: "Yeseva One";
+  src: url("./fonts/YesevaOne-Regular.ttf") format("ttf");
+}
+
+
 @keyframes shine {
   0% {
     background-position: -200%;
