Worked on the Hero Section

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -34,6 +34,11 @@
   src: url("./fonts/Moonrising.otf") format("otf");
 }
 
+@font-face {
+  font-family: "mixedfeelings";
+  src: url("./fonts/mixedfeelings.ttf") format("ttf");
+}
+
 
 @keyframes shine {
   0% {
