Completed Events page

--- a/src/app/events/page.css
+++ b/src/app/events/page.css
@@ -33,6 +33,9 @@
     /* The 'animation' property applies the 'letter-breathe' keyframes to the element, making it animate over 3 seconds.'ease-in-out' makes the movement start and end slowly, and 'infinite' makes it repeat forever. */
     /* Controls the animation (3s is the duration) */
     animation: letter-breathe 5s ease-in-out infinite;
+    background-image: url("../../images/blueSky.jpg");
+    background-size:auto;
+    background-position:0px 355vw;
   }
   
   /* Keyframes define the sequence of styles that an element will go through during an animation. */
