--- a/src/components/DL_Toggle.css
+++ b/src/components/DL_Toggle.css
@@ -5,6 +5,7 @@
     display: inline-block;
     width: 3.5em;
     height: 2em;
+    
   }
   
   /* Hide default HTML checkbox */
@@ -16,7 +17,7 @@
   
   /* The slider */
   .slider {
-    --background: #28096b;
+    --background: #011627;
     position: absolute;
     cursor: pointer;
     top: 0;
@@ -24,8 +25,9 @@
     right: 0;
     bottom: 0;
     background-color: var(--background);
-    transition: .5s;
+    transition: 1s;
     border-radius: 30px;
+    
   }
   
   .slider:before {
@@ -36,16 +38,16 @@
     border-radius: 50%;
     left: 10%;
     bottom: 15%;
-    box-shadow: inset 8px -4px 0px 0px #fff000;
+    box-shadow: inset 8px -4px 0px 0px #FF2323;
     background: var(--background);
-    transition: .5s;
+    transition: 1s;
   }
   
   input:checked + .slider {
-    background-color: #522ba7;
+    background-color: #e7f5ff;
   }
   
   input:checked + .slider:before {
     transform: translateX(100%);
-    box-shadow: inset 15px -4px 0px 15px #fff000;
+    box-shadow: inset 15px -4px 0px 15px #FF2323;
   }
