--- a/src/app/loader.css
+++ b/src/app/loader.css
@@ -1,86 +1,54 @@
-.loading-screen {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: auto;
-    font-size: 2rem;
+
+.square {
+  display: inline-block;
+  width: 2vw;
+  height: 2vw;
+  animation: loading 2s cubic-bezier(0.075, 0.82, 0.165, 1) infinite;
+  transform-origin: bottom top;
+  position: relative;
+  margin:1rem;
+  border-radius: 50%;
 }
 
-.loading-screen .dot {
-    position: relative;
-    width: 2rem;
-    height: 2rem;
-    margin: 0.8em;
-    border-radius: 50%;
+.square:not(:last-child) {
+  margin-right: 2px;
 }
 
-
-.loading-screen .dot::before {
-    position: absolute;
-    content: "";
-    width: 100%;
-    height: 100%;
-    background: inherit;
-    border-radius: inherit;
-    animation: anime 2s ease-out infinite;
+@keyframes loading {
+0% {
+    transform: translateY(0px) scale(1.3);
+  }
+  25% {
+    transform: translateY(0px) scale(1.3);
+  }
+  50% {
+    transform: translateY(25px) scale(0.5);
+  }
+  75% {
+    transform: translateY(0px) scale(1.3);
+  }
+  100% {
+    transform: translateY(0px) scale(1.3);
+  }
 }
-
-
-@-webkit-keyframes anime {
-    50%,
-    75% {
-        transform: scale(2.5);
-    }
-    80%,
-    100% {
-        opacity: 0;
-    }
+.square-1 {
+  animation-delay: 0.8s;
 }
-
-@keyframes anime {
-    50%,
-    75% {
-        transform: scale(2.5);
-    }
-    80%,
-    100% {
-        opacity: 0;
-    }
+.square-2 {
+  animation-delay: 0.7s;
 }
-
-
-.loading-screen .dot:nth-child(1) {
-    background-color: #4285f5;
+.square-3 {
+  animation-delay: 0.6s;
 }
-.loading-screen .dot:nth-child(2) {
-    background-color: #ea4436; 
+.square-4 {
+  animation-delay: 0.5s;
 }
-
-.loading-screen .dot:nth-child(3) {
-    background-color: #fbbd06; 
+.square-5 {
+  animation-delay: 0.4s;
 }
-
-.loading-screen .dot:nth-child(4) {
-    background-color: #34a952;  
+.square-6 {
+  animation-delay: 0.3s;
 }
-
-.loading-screen .dot:nth-child(5) {
-    background-color: #cf9fff; 
+.square-7 {
+  animation-delay: 0.2s;
 }
-
-.loading-screen .dot:nth-child(1)::before {
-    animation-delay: 0.2s;
-} 
-.loading-screen .dot:nth-child(2)::before {
-    animation-delay: 0.4s;
-} 
-.loading-screen .dot:nth-child(3)::before {
-    animation-delay: 0.6s;
-} 
-.loading-screen .dot:nth-child(4)::before {
-    animation-delay: 0.8s;
-} 
-.loading-screen .dot:nth-child(5)::before {
-    animation-delay: 1s;
-} 
